test/scc_test/exp/semantic-errors/095.a
095.t:5:7: error: assignment from incompatible pointer type